New updates everything working

--- a/scripts/testando.ipynb
+++ b/scripts/testando.ipynb
@@ -2,30 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "global name 'math' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-1d5888a55cf1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[0mPt1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mj1_GENWZ_Pt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m     \u001b[0mTheta1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAuxiliarFunctions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtheta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m     \u001b[0mComp1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAuxiliarFunctions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mComponents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mE1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mEta1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mPhi1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mTheta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/functions/AuxiliarFunctions.pyc\u001b[0m in \u001b[0;36mtheta\u001b[1;34m(Eta)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtheta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEta\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mtheta\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mEta\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mtheta\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: global name 'math' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix:  [[60.844, 54.66, 60.053, 41.987, 60.312, 60.621], [61.02, 106.725, 164.265, 98.093, 67.069, 95.558]]\n"
      ]
     }
    ],
    "source": [
     "import ROOT\n",
     "from NeuralNetwork import MultiLayerPerceptron as mlp\n",
-    "from functions import AuxiliarFunctions\n",
+    "from functions import *\n",
+    "\n",
+    "ROOT.gROOT.Reset()\n",
+    "ROOT.gStyle.SetOptStat(0)\n",
     "\n",
     "nrEvents = 5\n",
+    "\n",
+    "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results\"\n",
     "\n",
     "data_input = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet/lvbb125.root\"\n",
     "treeName = \"perevent\"\n",
@@ -33,37 +33,83 @@
     "file = ROOT.TFile(data_input,\"READ\")\n",
     "tree = file.Get(str(treeName))\n",
     "\n",
-    "#tree.SetBranchStatus(\"*\",0);\n",
-    "# j1\n",
-    "#tree.SetBranchStatus(\"j1_GENWZ_E\",1);\n",
-    "#tree.SetBranchStatus(\"j1_GENWZ_Pt\",1);\n",
-    "#tree.SetBranchStatus(\"j1_GENWZ_Eta\",1);\n",
-    "#tree.SetBranchStatus(\"j1_GENWZ_Phi\",1);\n",
-    "# j2\n",
-    "#tree.SetBranchStatus(\"j2_GENWZ_E\",1);\n",
-    "#tree.SetBranchStatus(\"j2_GENWZ_Pt\",1);\n",
-    "#tree.SetBranchStatus(\"j2_GENWZ_Eta\",1);\n",
-    "#tree.SetBranchStatus(\"j2_GENWZ_Phi\",1);\n",
+    "# for histograms\n",
+    "bins = 60\n",
+    "m_max = 300\n",
+    "m_min = 0\n",
     "\n",
+    "ylabel = \"Occurrences\"\n",
     "\n",
+    "list_inf = []\n",
+    "list_color = []\n",
+    "\n",
+    "hist_inf = HistogramFunctions.OneDimHistInfo(\"Relative Pt\",\"h_ptrel\",bins,m_min,m_max,\"Relative Pt\",ylabel)\n",
+    "list_inf.append(hist_inf)\n",
+    "list_color.append(ROOT.kRed)\n",
+    "\n",
+    "hist_inf = HistogramFunctions.OneDimHistInfo(\"Transverse Momentum\",\"h_pt\",bins,m_min,m_max,\"Transverse Momentum\",ylabel)\n",
+    "list_inf.append(hist_inf)\n",
+    "list_color.append(ROOT.kGreen)\n",
+    "\n",
+    "list_hist_test = HistogramFunctions.CreateListOf1DHistograms(list_inf,list_color)\n",
+    "# end\n",
+    "\n",
+    "# making list for create an input to a NN\n",
     "list_val = []\n",
     "list_ptrel = []\n",
     "list_pt = []\n",
+    "# end\n",
+    "\n",
     "\n",
     "for (i,entry) in enumerate(tree):\n",
     "    if nrEvents>0:\n",
     "        if i>nrEvents:\n",
     "            continue\n",
-    "    # variables for j1     \n",
+    "    # variables for j1.     \n",
     "    E1 = tree.j1_GENWZ_E\n",
     "    Eta1 = tree.j1_GENWZ_Eta\n",
     "    Phi1 = tree.j1_GENWZ_Phi\n",
     "    Pt1 = tree.j1_GENWZ_Pt\n",
     "    \n",
     "    Theta1 = AuxiliarFunctions.theta(Eta1)\n",
-    "    Comp1 = AuxiliarFunctions.Components(E1,Eta1,Phi1,Theta1)\n",
+    "    Comp1 = AuxiliarFunctions.Componets(E1,Eta1,Phi1,Theta1)\n",
+    "    norm1 = AuxiliarFunctions.norm(Comp1)\n",
     "    \n",
-    "    print \"Here go!\"\n",
+    "    # variables for j2.     \n",
+    "    E2 = tree.j2_GENWZ_E\n",
+    "    Eta2 = tree.j2_GENWZ_Eta\n",
+    "    Phi2 = tree.j2_GENWZ_Phi\n",
+    "    Pt2 = tree.j2_GENWZ_Pt\n",
+    "    \n",
+    "    Theta2 = AuxiliarFunctions.theta(Eta2)\n",
+    "    Comp2 = AuxiliarFunctions.Componets(E2,Eta2,Phi2,Theta2)\n",
+    "    norm2 = AuxiliarFunctions.norm(Comp2)\n",
+    "    \n",
+    "    # sum of components.\n",
+    "    Comp3 = AuxiliarFunctions.somaComponents(Comp1,Comp2)\n",
+    "    norm3 = AuxiliarFunctions.norm(Comp3)\n",
+    "    numerador1 = AuxiliarFunctions.numerador(Comp1,Comp3)\n",
+    "    \n",
+    "    angle1 = AuxiliarFunctions.alpha(numerador1,norm1,norm3)\n",
+    "    \n",
+    "    #compute Relative Pt\n",
+    "    ptrel_j1 = AuxiliarFunctions.PtRelative(E1,angle1)\n",
+    "    \n",
+    "    #fill list with variables\n",
+    "    list_ptrel.append(round(ptrel_j1,3))\n",
+    "    list_pt.append(round(Pt1,3))\n",
+    "    \n",
+    "    #fill histograms\n",
+    "    list_hist_test[0].Fill(ptrel_j1)\n",
+    "    list_hist_test[1].Fill(Pt1)\n",
+    "    \n",
+    "list_val.append(list_ptrel)\n",
+    "list_val.append(list_pt)\n",
+    "\n",
+    "HistogramFunctions.Draw1DHists(list_hist_test,output)\n",
+    "\n",
+    "print \"Matrix: \", list_val\n",
+    "#print \"Result\", list_hist_test[0]\n",
     "    "
    ]
   }
