--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
    "source": [
     "import ROOT\n",
     "from NeuralNetwork import MultiLayerPerceptron as mlp\n",
-    "from functions import *\n",
+    "from functions import HistogramFunctions,AuxiliarFunctions,FigureFunctions,FitFunctions\n",
     "\n",
     "ROOT.gROOT.Reset()\n",
     "ROOT.gStyle.SetOptStat(0)\n",
@@ -103,6 +103,7 @@
     "    list_hist_test[0].Fill(ptrel_j1)\n",
     "    list_hist_test[1].Fill(Pt1)\n",
     "    \n",
+    "\n",
     "list_val.append(list_ptrel)\n",
     "list_val.append(list_pt)\n",
     "\n",
