--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -31,7 +31,7 @@
     "treeName = \"perevent\"\n",
     "\n",
     "file = ROOT.TFile(data_input,\"READ\")\n",
-    "tree = file.Get(str(treeName))\n",
+    "tree = file.Get(treeName)\n",
     "\n",
     "# for histograms\n",
     "bins = 60\n",
