Make Plots for Backgrounds

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -535,6 +535,8 @@
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/Plots\"\n",
     "\n",
     "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
+    "\n",
+    "\n",
     "\n",
     "#nrEvents = tree.GetEntries()\n",
     "nrEvents = 1\n",
@@ -554,7 +556,6 @@
     "for process in processes.split(\",\"):\n",
     "    data_input = data_path+\"/\"+process+\".root\"\n",
     "    treeName = \"perevent\"\n",
-    "\n",
     "    file = ROOT.TFile(data_input,\"READ\")\n",
     "    tree = file.Get(treeName)\n",
     "\n",
@@ -885,68 +886,80 @@
     "    HistogramFunctions.Draw1DHists(list_hist_SumPtTrk,output)\n",
     "\n",
     "    # make clone lists for draw all histograms in subcanvas\n",
-    "    clone_list_pt = []\n",
-    "    for hist in list_hist_pt:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_pt.append(newhist)  \n",
+    "    varis = \"pt,eta,phi,E,PtRel,FracEM3,FracTile0,TrkWidth,EMF,JVF,NTrk,SumPtTrk\"\n",
     "    \n",
-    "    clone_list_eta = []\n",
-    "    for hist in list_hist_eta:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_eta.append(newhist)  \n",
+    "    for var in varis.split(\",\"):\n",
+    "        clone_list_+var=[]\n",
+    "        for hist in list_hist_var:\n",
+    "            newhist = hist.Clone()\n",
+    "            clone_list_+var.append(newhist)\n",
+    "    #clone_list_pt = []\n",
+    "    #for hist in list_hist_pt:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_pt.append(newhist)  \n",
+    "    #\n",
+    "    #clone_list_eta = []\n",
+    "    #for hist in list_hist_eta:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_eta.append(newhist)  \n",
+    "    #\n",
+    "    #clone_list_phi = []\n",
+    "    #for hist in list_hist_phi:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_phi.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_E = []\n",
+    "    #for hist in list_hist_E:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_E.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_PtRel = []\n",
+    "    #for hist in list_hist_PtRel:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_PtRel.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_FracEM3 = []\n",
+    "    #for hist in list_hist_FracEM3:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_FracEM3.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_FracTile0 = []\n",
+    "    #for hist in list_hist_FracTile0:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_FracTile0.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_TrkWidth = []\n",
+    "    #for hist in list_hist_TrkWidth:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_TrkWidth.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_EMF = []\n",
+    "    #for hist in list_hist_EMF:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_EMF.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_JVF = []\n",
+    "    #for hist in list_hist_JVF:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_JVF.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_NTrk = []\n",
+    "    #for hist in list_hist_NTrk:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_NTrk.append(newhist)\n",
+    "    #\n",
+    "    #clone_list_SumPtTrk = []\n",
+    "    #for hist in list_hist_SumPtTrk:\n",
+    "    #    newhist = hist.Clone()\n",
+    "    #    clone_list_SumPtTrk.append(newhist)\n",
+    "\n",
     "    \n",
-    "    clone_list_phi = []\n",
-    "    for hist in list_hist_phi:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_phi.append(newhist)\n",
-    "\n",
-    "    clone_list_E = []\n",
-    "    for hist in list_hist_E:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_E.append(newhist)\n",
-    "\n",
-    "    clone_list_PtRel = []\n",
-    "    for hist in list_hist_PtRel:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_PtRel.append(newhist)\n",
-    "    \n",
-    "    clone_list_FracEM3 = []\n",
-    "    for hist in list_hist_FracEM3:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_FracEM3.append(newhist)\n",
-    "    \n",
-    "    clone_list_FracTile0 = []\n",
-    "    for hist in list_hist_FracTile0:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_FracTile0.append(newhist)\n",
-    "\n",
-    "    clone_list_TrkWidth = []\n",
-    "    for hist in list_hist_TrkWidth:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_TrkWidth.append(newhist)\n",
-    "\n",
-    "    clone_list_EMF = []\n",
-    "    for hist in list_hist_EMF:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_EMF.append(newhist)\n",
-    "\n",
-    "    clone_list_JVF = []\n",
-    "    for hist in list_hist_JVF:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_JVF.append(newhist)\n",
-    "\n",
-    "    clone_list_NTrk = []\n",
-    "    for hist in list_hist_NTrk:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_NTrk.append(newhist)\n",
-    "\n",
-    "    clone_list_SumPtTrk = []\n",
-    "    for hist in list_hist_SumPtTrk:\n",
-    "        newhist = hist.Clone()\n",
-    "        clone_list_SumPtTrk.append(newhist)\n",
-    "\n",
-    "    \n",
-    "    c1 = rootnotes.canvas(\"c1\", (2400, 1800))\n",
+    "    c1 = rootnotes.canvas(\"c1\", (1600, 1200))\n",
+    "    c2 = rootnotes.canvas(\"c2\", (800, 600))\n",
+    "    c3 = rootnotes.canvas(\"c3\", (800, 600))\n",
+    "    c4 = rootnotes.canvas(\"c4\", (800, 600))\n",
+    "    c5 = rootnotes.canvas(\"c5\", (800, 600))\n",
+    "    c6 = rootnotes.canvas(\"c6\", (800, 600))\n",
     "\n",
     "    c1.Divide(4,3)\n",
     "    a = c1.cd(1)\n",
@@ -980,20 +993,12 @@
     "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_SumPtTrk, \"Sum of The Pt Associated With Jets  \", \" SumPtTrk \", \"Events\", l)\n",
     "    \n",
     "    \n",
-    "    c2 = rootnotes.canvas(\"c2\", (800, 600))\n",
+    "    \n",
     "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_pt, \"Transverse Momentum\", \"P_{T} #left[#frac{GeV}{c^{2}}#right]\", \"Events\", c2)\n",
-    "\n",
-    "    c3 = rootnotes.canvas(\"c3\", (800, 600))\n",
     "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_eta, \"Pseudorapidity\", \" #eta \", \"Events\", c3)\n",
-    "\n",
-    "    c4 = rootnotes.canvas(\"c4\", (800, 600))\n",
     "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_phi, \"Azimuth Angle\", \" #phi \", \"Events\", c4)\n",
-    "\n",
-    "    c5 = rootnotes.canvas(\"c5\", (800, 600))\n",
     "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_E, \"Energy\", \" Energy \", \"Events\", c5)\n",
-    "\n",
     "    # Relative Pt \n",
-    "    c6 = rootnotes.canvas(\"c6\", (800, 600))\n",
     "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_PtRel, \"Relative Transverse Momentum\", \" P_{T} #left[#frac{GeV}{c^{2}}#right] \", \"Events\", c6)\n",
     "\n",
     "    c1.Print(output+\"/\"+process+\"_AllLevels.pdf\")\n",
@@ -1001,9 +1006,7 @@
     "    c3.Print(output+\"/\"+process+\"_EtaAll.pdf\")\n",
     "    c4.Print(output+\"/\"+process+\"_PhiAll.pdf\")\n",
     "    c5.Print(output+\"/\"+process+\"_EAll.pdf\")\n",
-    "    c6.Print(output+\"/\"+process+\"_PtRelAll.pdf\")\n",
-    "    \n",
-    "    ROOT.SetOwnership(c1,0)"
+    "    c6.Print(output+\"/\"+process+\"_PtRelAll.pdf\")"
    ]
   }
  ],
