Make Plots for Backgrounds

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -21,24 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nrEvents' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-812ae9a89059>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    246\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mCorrection\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCorrections\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    247\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mentry\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 248\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mnrEvents\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    249\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m>\u001b[0m\u001b[0mnrEvents\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    250\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nrEvents' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results\"\n",
@@ -49,7 +37,7 @@
     "file = ROOT.TFile(data_input,\"READ\")\n",
     "tree = file.Get(treeName)\n",
     "\n",
-    "#nrEvents = tree.GetEntries()\n",
+    "nrEvents = tree.GetEntries()\n",
     "#nrEvents = 4\n",
     "\n",
     "# for histograms\n",
@@ -524,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -886,72 +874,66 @@
     "    HistogramFunctions.Draw1DHists(list_hist_SumPtTrk,output)\n",
     "\n",
     "    # make clone lists for draw all histograms in subcanvas\n",
-    "    varis = \"pt,eta,phi,E,PtRel,FracEM3,FracTile0,TrkWidth,EMF,JVF,NTrk,SumPtTrk\"\n",
     "    \n",
-    "    for var in varis.split(\",\"):\n",
-    "        clone_list_+var=[]\n",
-    "        for hist in list_hist_var:\n",
-    "            newhist = hist.Clone()\n",
-    "            clone_list_+var.append(newhist)\n",
-    "    #clone_list_pt = []\n",
-    "    #for hist in list_hist_pt:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_pt.append(newhist)  \n",
-    "    #\n",
-    "    #clone_list_eta = []\n",
-    "    #for hist in list_hist_eta:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_eta.append(newhist)  \n",
-    "    #\n",
-    "    #clone_list_phi = []\n",
-    "    #for hist in list_hist_phi:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_phi.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_E = []\n",
-    "    #for hist in list_hist_E:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_E.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_PtRel = []\n",
-    "    #for hist in list_hist_PtRel:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_PtRel.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_FracEM3 = []\n",
-    "    #for hist in list_hist_FracEM3:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_FracEM3.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_FracTile0 = []\n",
-    "    #for hist in list_hist_FracTile0:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_FracTile0.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_TrkWidth = []\n",
-    "    #for hist in list_hist_TrkWidth:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_TrkWidth.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_EMF = []\n",
-    "    #for hist in list_hist_EMF:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_EMF.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_JVF = []\n",
-    "    #for hist in list_hist_JVF:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_JVF.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_NTrk = []\n",
-    "    #for hist in list_hist_NTrk:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_NTrk.append(newhist)\n",
-    "    #\n",
-    "    #clone_list_SumPtTrk = []\n",
-    "    #for hist in list_hist_SumPtTrk:\n",
-    "    #    newhist = hist.Clone()\n",
-    "    #    clone_list_SumPtTrk.append(newhist)\n",
+    "    clone_list_pt = []\n",
+    "    for hist in list_hist_pt:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_pt.append(newhist)  \n",
+    "    \n",
+    "    clone_list_eta = []\n",
+    "    for hist in list_hist_eta:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_eta.append(newhist)  \n",
+    "    \n",
+    "    clone_list_phi = []\n",
+    "    for hist in list_hist_phi:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_phi.append(newhist)\n",
+    "    \n",
+    "    clone_list_E = []\n",
+    "    for hist in list_hist_E:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_E.append(newhist)\n",
+    "    \n",
+    "    clone_list_PtRel = []\n",
+    "    for hist in list_hist_PtRel:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_PtRel.append(newhist)\n",
+    "    \n",
+    "    clone_list_FracEM3 = []\n",
+    "    for hist in list_hist_FracEM3:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_FracEM3.append(newhist)\n",
+    "    \n",
+    "    clone_list_FracTile0 = []\n",
+    "    for hist in list_hist_FracTile0:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_FracTile0.append(newhist)\n",
+    "    \n",
+    "    clone_list_TrkWidth = []\n",
+    "    for hist in list_hist_TrkWidth:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_TrkWidth.append(newhist)\n",
+    "    \n",
+    "    clone_list_EMF = []\n",
+    "    for hist in list_hist_EMF:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_EMF.append(newhist)\n",
+    "    \n",
+    "    clone_list_JVF = []\n",
+    "    for hist in list_hist_JVF:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_JVF.append(newhist)\n",
+    "    \n",
+    "    clone_list_NTrk = []\n",
+    "    for hist in list_hist_NTrk:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_NTrk.append(newhist)\n",
+    "    \n",
+    "    clone_list_SumPtTrk = []\n",
+    "    for hist in list_hist_SumPtTrk:\n",
+    "        newhist = hist.Clone()\n",
+    "        clone_list_SumPtTrk.append(newhist)\n",
     "\n",
     "    \n",
     "    c1 = rootnotes.canvas(\"c1\", (1600, 1200))\n",
