--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -537,40 +537,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
-    "\n",
+    "#processes = \"ZZ\"\n",
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/Plots\"\n",
     "\n",
     "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
     "\n",
     "\n",
     "\n",
-    "#nrEvents = tree.GetEntries()\n",
-    "nrEvents = 1\n",
+    "nrEvents = tree.GetEntries()\n",
+    "#nrEvents = 10\n",
     "\n",
     "ylabel = \"Occurrences\"\n",
     "\n",
-    "# Use Colors\n",
-    "list_color = []\n",
-    "list_color.append(ROOT.kBlue) # For truth\n",
-    "list_color.append(ROOT.kRed) \n",
-    "list_color.append(ROOT.kRed+1)\n",
-    "list_color.append(ROOT.kRed+2)\n",
-    "list_color.append(ROOT.kRed+3)\n",
-    "list_color.append(ROOT.kRed+4)\n",
-    "#end list of colors\n",
     "\n",
     "for process in processes.split(\",\"):\n",
     "    data_input = data_path+\"/\"+process+\".root\"\n",
     "    treeName = \"perevent\"\n",
     "    file = ROOT.TFile(data_input,\"READ\")\n",
     "    tree = file.Get(treeName)\n",
+    "\n",
+    "    # Use Colors\n",
+    "    list_color = []\n",
+    "    list_color.append(ROOT.kBlue) # For truth\n",
+    "    list_color.append(ROOT.kRed) \n",
+    "    list_color.append(ROOT.kRed+1)\n",
+    "    list_color.append(ROOT.kRed+2)\n",
+    "    list_color.append(ROOT.kRed+3)\n",
+    "    list_color.append(ROOT.kRed+4)\n",
+    "    #end list of colors\n",
     "\n",
     "    # for histograms\n",
     "    bins = 60\n",
@@ -961,12 +962,12 @@
     "        clone_list_SumPtTrk.append(newhist)\n",
     "\n",
     "    \n",
-    "    c1 = rootnotes.canvas(\"c1\", (1600, 1200))\n",
-    "    c2 = rootnotes.canvas(\"c2\", (800, 600))\n",
-    "    c3 = rootnotes.canvas(\"c3\", (800, 600))\n",
-    "    c4 = rootnotes.canvas(\"c4\", (800, 600))\n",
-    "    c5 = rootnotes.canvas(\"c5\", (800, 600))\n",
-    "    c6 = rootnotes.canvas(\"c6\", (800, 600))\n",
+    "    c1 = rootnotes.canvas(\"c1_\"+process, (1600, 1200))\n",
+    "    c2 = rootnotes.canvas(\"c2_\"+process, (800, 600))\n",
+    "    c3 = rootnotes.canvas(\"c3_\"+process, (800, 600))\n",
+    "    c4 = rootnotes.canvas(\"c4_\"+process, (800, 600))\n",
+    "    c5 = rootnotes.canvas(\"c5_\"+process, (800, 600))\n",
+    "    c6 = rootnotes.canvas(\"c6_\"+process, (800, 600))\n",
     "\n",
     "    c1.Divide(4,3)\n",
     "    a = c1.cd(1)\n",
@@ -1013,7 +1014,8 @@
     "    c3.Print(output+\"/\"+process+\"_EtaAll.pdf\")\n",
     "    c4.Print(output+\"/\"+process+\"_PhiAll.pdf\")\n",
     "    c5.Print(output+\"/\"+process+\"_EAll.pdf\")\n",
-    "    c6.Print(output+\"/\"+process+\"_PtRelAll.pdf\")"
+    "    c6.Print(output+\"/\"+process+\"_PtRelAll.pdf\")\n",
+    "    "
    ]
   }
  ],
